# agentic-devops-starter

./: .gitignore  AGENTS.md  CREDENTIAL_CONFIGURATION.md  DEPLOYMENT.md  FRONTEND_IMPLEMENTATION_SUMMARY.md  HTTPS_SETUP.md  IMPLEMENTATION_SUMMARY.md  INGRESS_TROUBLESHOOTING.md  MIGRATION_SUMMARY.md  README.md  SWDESIGN.html  SWDESIGN.md  init.sh
app/: .env.example  AGUI_DEMO.md  DEVUI_USAGE.md  Dockerfile  Dockerfile.appservice  Dockerfile.devui  IMPLEMENTATION_SUMMARY.md  README.md  agui_client.py  agui_client_hybrid.py  agui_server.py  devui_server.py  feature_flags.py  init.sh  main.py  observability.py  otel-collector-config.yaml  pyproject.toml  start-backend.sh  start-otel-collector.sh
app/frontend/: .eslintignore  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
app/frontend/e2e/: app.spec.ts
app/frontend/src/: App.tsx  index.css
app/skills/: README.md
app/skills/code-reviewer/: SKILL.md
app/skills/devops-troubleshooter/: SKILL.md
app/skills/secure-coding-advisor/: SKILL.md
app/src/: __init__.py  blob_storage.py  blob_storage.pyi  chat_fleet.py  config.py  config.pyi  error_handler.py  error_handler.pyi  file_validation.py  file_validation.pyi  jobs.py  jobs.pyi  logging_utils.py  logging_utils.pyi  models.py  models.pyi  observability.py  observability.pyi  orchestrator.py  orchestrator.pyi  parsing.py  patterns.py  patterns.pyi  routes.py  routes.pyi  skills.py  skills.pyi  sse_utils.py  sse_utils.pyi  state.py  state.pyi  storage.py  token_optimization.py
app/src/agents/: __init__.py  base_agent.py  conversational_agent.py  tools.py
app/src/api/: error_handler.py  models.py  routes.py  sse_utils.py
app/src/config/: __init__.py  (+1 more)
app/tests/: __init__.py  test_agent.py  test_agui_clients.py  test_agui_server.py  test_base_agent.py  test_blob_storage.py  test_config.py  test_feature_flags.py  test_fleet_infinite.py  test_hooks.py  test_logging_utils.py  test_main.py  test_observability.py  test_patterns.py  test_prompts.py  test_security.py  test_session_pool_skills.py  test_skills.py  test_source_structure.py  test_teams.py  test_token_optimization.py  test_tools.py  test_use_cases.py
(+260 files in other folders)
