[project]
name = "agentic-devops-starter"
version = "0.1.0"
description = "Agentic DevOps Starter Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent-framework-devui>=1.0.0b260212",
    "agent-framework-core>=1.0.0b260212",
    "agent-framework-azure-ai>=1.0.0b260212",
    "azure-identity>=1.19.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.uv]
prerelease = "allow"
